dev-app/gateway/referencegrant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-cert-manager
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: cert-manager
  to:
    - group: gateway.networking.k8s.io
      kind: Gateway
