dev-app/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  gatewayClassName: envoy-gateway
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: app-proxy
      namespace: app
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All # allows cert-manager provisioned HTTPRoutes to be used

    - name: calendar-teapot-ovh
      protocol: HTTPS
      port: 443
      hostname: calendar.teapot.ovh
      tls:
        mode: Terminate
        certificateRefs:
          - name: calendar-teapot-ovh-tls
